// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiler add function (local.get, i32.add, exported func) 1`] = `
"(module
 (export "add" (func $add))
 (func $add
  (param $a i32)
  (param $b i32)
  (result i32)
  (i32.add
   (local.get $a)
   (local.get $b)
  )
 )
)"
`;

exports[`compiler add function import 1`] = `
"(module
 (import "env" "host_add" (func $add
   (param i32)
   (param i32)
   (result i32)
  )
 )
)"
`;

exports[`compiler add node 1`] = `
"(i32.add
 (i32.const 10)
 (i32.const 5)
)"
`;

exports[`compiler and node 1`] = `
"(i32.and
 (i32.const 15790320)
 (i32.const 986895)
)"
`;

exports[`compiler call node 1`] = `
"(call $abc
 (i32.const 10)
)"
`;

exports[`compiler call_indirect node 1`] = `
"(call_indirect
 $0
 (param i32)
 (param i32)
 (result i32)
 (i32.const 3)
 (i32.const 4)
 (i32.const 0)
)"
`;

exports[`compiler clz node 1`] = `
"(i32.clz
 (i32.const 1)
 (i32.const 2)
)"
`;

exports[`compiler const node 1`] = `"(f32.const 1.5)"`;

exports[`compiler ctz node 1`] = `
"(i32.ctz
 (i32.const 1)
 (i32.const 2)
)"
`;

exports[`compiler div_s node 1`] = `
"(i32.div_s
 (i32.const 10)
 (i32.const 5)
)"
`;

exports[`compiler div_u node 1`] = `
"(i32.div_u
 (i32.const 10)
 (i32.const 5)
)"
`;

exports[`compiler localGet node 1`] = `"(local.get $abc)"`;

exports[`compiler localSet node 1`] = `
"(local.set $abc
 (f64.const 10)
)"
`;

exports[`compiler mul node 1`] = `
"(i32.mul
 (i32.const 10)
 (i32.const 5)
)"
`;

exports[`compiler or node 1`] = `
"(i32.or
 (i32.const 15790320)
 (i32.const 986895)
)"
`;

exports[`compiler popcnt node 1`] = `
"(i32.popcnt
 (i32.const 1)
 (i32.const 2)
)"
`;

exports[`compiler rem_s node 1`] = `
"(i32.rem_s
 (i32.const 10)
 (i32.const 5)
)"
`;

exports[`compiler rem_u node 1`] = `
"(i32.rem_u
 (i32.const 10)
 (i32.const 5)
)"
`;

exports[`compiler rotl node 1`] = `
"(i32.rotl
 (i32.const 20)
 (i32.const 2)
)"
`;

exports[`compiler rotr node 1`] = `
"(i32.rotr
 (i32.const 20)
 (i32.const 2)
)"
`;

exports[`compiler shl node 1`] = `
"(i32.shl
 (i32.const 10)
 (i32.const 5)
)"
`;

exports[`compiler shr_s node 1`] = `
"(i32.shr_s
 (i32.const 20)
 (i32.const 2)
)"
`;

exports[`compiler shr_u node 1`] = `
"(i32.shr_u
 (i32.const 20)
 (i32.const 2)
)"
`;

exports[`compiler sub node 1`] = `
"(i32.sub
 (i32.const 10)
 (i32.const 5)
)"
`;

exports[`compiler xor node 1`] = `
"(i32.xor
 (i32.const 15790320)
 (i32.const 986895)
)"
`;
